Owner attributes & BunnyBreederDTO
